// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_1"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="field_1"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_2"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="field_2"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="field_3"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="field_3"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with a custom ID 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="foo"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="foo"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="foo"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="foo"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="foo"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="foo"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with an error 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--erroneous"
    >
      <input
        aria-labelledby="field_4_label field_4_error"
        class="field__input field__input--inline field__input--erroneous"
        id="field_4"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--erroneous"
        for="field_4"
        id="field_4_label"
      >
        Foo
      </label>
      <span
        class="message message--problem"
        id="field_4_error"
        role="alert"
      >
        Oh no!
      </span>
    </div>
    <div
      class="field field--inline field--erroneous"
    >
      <input
        aria-labelledby="field_5_label field_5_error"
        class="field__input field__input--inline field__input--erroneous"
        id="field_5"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--erroneous"
        for="field_5"
        id="field_5_label"
      >
        Bar
      </label>
      <span
        class="message message--problem"
        id="field_5_error"
        role="alert"
      >
        Oh no!
      </span>
    </div>
    <div
      class="field field--inline field--erroneous field--disabled"
    >
      <input
        aria-labelledby="field_6_label field_6_error"
        class="field__input field__input--inline field__input--erroneous field__input--disabled"
        disabled=""
        id="field_6"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--erroneous field__label--disabled"
        for="field_6"
        id="field_6_label"
      >
        Disabled
      </label>
      <span
        class="message message--problem"
        id="field_6_error"
        role="alert"
      >
        Oh no!
      </span>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with help 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_7"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="field_7"
      >
        Foo
        <span
          class="field__help"
        >
          Good luck
        </span>
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_8"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="field_8"
      >
        Bar
        <span
          class="field__help"
        >
          Good luck
        </span>
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="field_9"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="field_9"
      >
        Disabled
        <span
          class="field__help"
        >
          Good luck
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with inline 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_22"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="field_22"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_23"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="field_23"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="field_24"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="field_24"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with large 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--large"
    >
      <input
        class="field__input field__input--inline field__input--large"
        id="field_16"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--large"
        for="field_16"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--large"
    >
      <input
        class="field__input field__input--inline field__input--large"
        id="field_17"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--large"
        for="field_17"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--large field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--large field__input--disabled"
        disabled=""
        id="field_18"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--large field__label--disabled"
        for="field_18"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with small 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--small"
    >
      <input
        class="field__input field__input--inline field__input--small"
        id="field_19"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--small"
        for="field_19"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--small"
    >
      <input
        class="field__input field__input--inline field__input--small"
        id="field_20"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--small"
        for="field_20"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--small field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--small field__input--disabled"
        disabled=""
        id="field_21"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--small field__label--disabled"
        for="field_21"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with success 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--success"
    >
      <input
        class="field__input field__input--inline field__input--success"
        id="field_10"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--success"
        for="field_10"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--success"
    >
      <input
        class="field__input field__input--inline field__input--success"
        id="field_11"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--success"
        for="field_11"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--success field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--success field__input--disabled"
        disabled=""
        id="field_12"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--success field__label--disabled"
        for="field_12"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Checkbox /> renders with touched 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--touched field--success"
    >
      <input
        class="field__input field__input--inline field__input--touched field__input--success"
        id="field_13"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--touched field__label--success"
        for="field_13"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--touched field--success"
    >
      <input
        class="field__input field__input--inline field__input--touched field__input--success"
        id="field_14"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--touched field__label--success"
        for="field_14"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--touched field--success field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--touched field__input--success field__input--disabled"
        disabled=""
        id="field_15"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--touched field__label--success field__label--disabled"
        for="field_15"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_1"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="field_1"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_2"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="field_2"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="field_3"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="field_3"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with an error 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--erroneous"
    >
      <input
        aria-labelledby="field_4_label field_4_error"
        class="field__input field__input--inline field__input--erroneous"
        id="field_4"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--erroneous"
        for="field_4"
        id="field_4_label"
      >
        Foo
      </label>
      <span
        class="message message--problem"
        id="field_4_error"
        role="alert"
      >
        Oh no!
      </span>
    </div>
    <div
      class="field field--inline field--erroneous"
    >
      <input
        aria-labelledby="field_5_label field_5_error"
        class="field__input field__input--inline field__input--erroneous"
        id="field_5"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--erroneous"
        for="field_5"
        id="field_5_label"
      >
        Bar
      </label>
      <span
        class="message message--problem"
        id="field_5_error"
        role="alert"
      >
        Oh no!
      </span>
    </div>
    <div
      class="field field--inline field--erroneous field--disabled"
    >
      <input
        aria-labelledby="field_6_label field_6_error"
        class="field__input field__input--inline field__input--erroneous field__input--disabled"
        disabled=""
        id="field_6"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--erroneous field__label--disabled"
        for="field_6"
        id="field_6_label"
      >
        Disabled
      </label>
      <span
        class="message message--problem"
        id="field_6_error"
        role="alert"
      >
        Oh no!
      </span>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with help 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_7"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="field_7"
      >
        Foo
        <span
          class="field__help"
        >
          Good luck
        </span>
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_8"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="field_8"
      >
        Bar
        <span
          class="field__help"
        >
          Good luck
        </span>
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="field_9"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="field_9"
      >
        Disabled
        <span
          class="field__help"
        >
          Good luck
        </span>
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with inline 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_22"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline"
        for="field_22"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline"
    >
      <input
        class="field__input field__input--inline"
        id="field_23"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline"
        for="field_23"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--disabled"
        disabled=""
        id="field_24"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--disabled"
        for="field_24"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with large 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--large"
    >
      <input
        class="field__input field__input--inline field__input--large"
        id="field_16"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--large"
        for="field_16"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--large"
    >
      <input
        class="field__input field__input--inline field__input--large"
        id="field_17"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--large"
        for="field_17"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--large field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--large field__input--disabled"
        disabled=""
        id="field_18"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--large field__label--disabled"
        for="field_18"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with small 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--small"
    >
      <input
        class="field__input field__input--inline field__input--small"
        id="field_19"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--small"
        for="field_19"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--small"
    >
      <input
        class="field__input field__input--inline field__input--small"
        id="field_20"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--small"
        for="field_20"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--small field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--small field__input--disabled"
        disabled=""
        id="field_21"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--small field__label--disabled"
        for="field_21"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with success 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--success"
    >
      <input
        class="field__input field__input--inline field__input--success"
        id="field_10"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--success"
        for="field_10"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--success"
    >
      <input
        class="field__input field__input--inline field__input--success"
        id="field_11"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--success"
        for="field_11"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--success field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--success field__input--disabled"
        disabled=""
        id="field_12"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--success field__label--disabled"
        for="field_12"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<RadioGroup /> renders with touched 1`] = `
<fieldset
  class="fieldset fieldset--inline"
>
  <legend
    class="fieldset__legend"
  >
    Jawn
  </legend>
  <div
    class="fieldset__body"
  >
    <div
      class="field field--inline field--touched field--success"
    >
      <input
        class="field__input field__input--inline field__input--touched field__input--success"
        id="field_13"
        name="jawn"
        type="radio"
        value="foo"
      />
      <label
        class="field__label field__label--inline field__label--touched field__label--success"
        for="field_13"
      >
        Foo
      </label>
    </div>
    <div
      class="field field--inline field--touched field--success"
    >
      <input
        class="field__input field__input--inline field__input--touched field__input--success"
        id="field_14"
        name="jawn"
        type="radio"
        value="bar"
      />
      <label
        class="field__label field__label--inline field__label--touched field__label--success"
        for="field_14"
      >
        Bar
      </label>
    </div>
    <div
      class="field field--inline field--touched field--success field--disabled"
    >
      <input
        class="field__input field__input--inline field__input--touched field__input--success field__input--disabled"
        disabled=""
        id="field_15"
        name="jawn"
        type="radio"
        value="buzz"
      />
      <label
        class="field__label field__label--inline field__label--touched field__label--success field__label--disabled"
        for="field_15"
      >
        Disabled
      </label>
    </div>
  </div>
</fieldset>
`;
